tag: 0.2.1. Removed old files. Added 1 files.

--- a/1080-h/1080-h.htm
+++ b/1080-h/1080-h.htm
@@ -10,7 +10,7 @@
       A Modest Proposal, by Dr. Jonathan Swift
     </title>
     <style type="text/css" xml:space="preserve">
-    
+
     body { margin:5%; background:#faebd0; text-align:justify}
     P { text-indent: 1em; margin-top: .25em; margin-bottom: .25em; }
     H1,H2,H3,H4,H5,H6 { text-align: center; margin-left: 15%; margin-right: 15%; }
@@ -28,7 +28,7 @@
                margin: 0; padding: 0; position: absolute; right: 1%;
                text-align: right;}
     pre        { font-style: italic; font-size: 90%; margin-left: 10%;}
-    
+
 </style>
   </head>
   <body>
@@ -160,7 +160,7 @@ Produced by An Anonymous Volunteer, and David Widger
       annually born. The question therefore is, How this number shall be reared,
       and provided for? which, as I have already said, under the present
       situation of affairs, is utterly impossible by all the methods hitherto
-      proposed. For we can neither employ them in handicraft or agriculture; we
+      proposed. For we can neither employ them in handicraft or agriculture; they
       neither build houses, (I mean in the country) nor cultivate land: they can
       very seldom pick up a livelihood by stealing till they arrive at six years
       old; except where they are of towardly parts, although I confess they
